--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-./node_modules
+### Node ###
+
+# Dependency directories
+node_modules/
+
+# Build output
+/dist/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
