--- a/package.json
+++ b/package.json
@@ -5,30 +5,42 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
-    "test": "mocha --require ts-node/register ./src/**/*.spec.ts --exit"
+    "test": "mocha --require ts-node/register ./src/**/*.spec.ts --exit",
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@faker-js/faker": "^8.1.0",
-    "@typegoose/typegoose": "^11.5.0",
-    "chai": "^4.3.10",
+    "@faker-js/faker": "^8.4.1",
+    "@typegoose/typegoose": "^12.2.0",
+    "chai": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.5.3"
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.6",
-    "@types/express": "^4.17.18",
-    "@types/mocha": "^10.0.2",
-    "@types/node": "^20.8.0",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@types/chai": "^4.3.12",
+    "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.20",
     "@types/reflect-metadata": "^0.1.0",
-    "@types/sinon": "^10.0.17",
-    "@types/supertest": "^2.0.13",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.1",
-    "sinon": "^16.0.0",
-    "supertest": "^6.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/sinon": "^17.0.3",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "mocha": "^10.3.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
+    "sinon": "^17.0.1",
+    "supertest": "^6.3.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
