--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "es2020",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
   },
   "types": ["reflect-metadata", "mocha"],
   "exclude": [
