--- a/package.json
+++ b/package.json
@@ -4,42 +4,45 @@
   "description": "DevOZ - Tech test",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts",
-    "test": "mocha --require ts-node/register ./src/**/*.spec.ts --exit",
+    "start": "ts-node src/main/server.ts",
+    "build": "tsc",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "prepare": "husky",
     "commitlint": "commitlint --edit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
     "@typegoose/typegoose": "^12.2.0",
-    "chai": "^5.1.0",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.2",
-    "@types/chai": "^4.3.12",
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
+    "@faker-js/faker": "^8.4.1",
+    "@shelf/jest-mongodb": "^4.2.0",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.21",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.20",
-    "@types/reflect-metadata": "^0.1.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.24",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
-    "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "sinon": "^17.0.1",
     "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
