refactor: change git add . to git add in .eslintrc

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -2,6 +2,6 @@
   "*.{ts,tsx}": [
     "eslint --fix",
     "prettier --config .prettierrc ./src/**/*.ts --write",
-    "git add ."
+    "git add"
   ]
 }
