--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:ci": "npm test -- --coverage",
     "prepare": "husky",
     "commitlint": "commitlint --edit"
   },
